# toolpath

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FAQ.md  LICENSE  NOTES.md  README.md  RFC.md
.cargo/: config.toml
.claude/commands/: roym.md
.github/workflows/: deploy-site.yml
crates/path/: Cargo.toml
crates/path/src/: cmd_merge.rs  cmd_query.rs  cmd_track.rs  cmd_validate.rs  main.rs
crates/toolpath/: Cargo.toml  README.md
crates/toolpath-claude/: Cargo.toml  README.md
crates/toolpath-claude/src/: async_watcher.rs  chain.rs  derive.rs  error.rs  io.rs  lib.rs  paths.rs  provider.rs  query.rs  reader.rs  types.rs  watcher.rs
crates/toolpath-cli/: Cargo.toml  README.md
crates/toolpath-cli/src/: cmd_derive.rs  cmd_haiku.rs  cmd_list.rs  cmd_render.rs  cmd_track.rs  main.rs
crates/toolpath-cli/tests/: integration.rs
crates/toolpath-convo/: Cargo.toml  README.md
crates/toolpath-convo/src/: lib.rs
crates/toolpath-dot/: Cargo.toml  README.md
crates/toolpath-dot/src/: lib.rs
crates/toolpath-git/: Cargo.toml  README.md
crates/toolpath-git/src/: lib.rs
crates/toolpath-github/: Cargo.toml  README.md
crates/toolpath-github/src/: lib.rs
crates/toolpath/src/: lib.rs  query.rs  types.rs
docs/: RFC-correlation.md
examples/: graph-01-release.json  path-01-pr.json  path-02-local-session.json  path-03-signed-pr.json  path-04-exploration.json  step-01-minimal.json  step-02-agent.json  step-03-formatter.json  step-04-human-refinement.json  step-05-dead-end.json  step-06-signed.json  step-07-merge.json
schema/: toolpath.schema.json
scripts/: build-wasm.sh  fmt.sh  quality_gates.sh  release.sh  site.sh
site/: .eleventyignore  .gitignore  .prettierignore  BRANDBOOK.md  eleventy.config.js  index.md  package.json  pnpm-lock.yaml
site/_data/: crates.json  site.json
site/_includes/: base.njk
site/css/: playground.css  style.css  visualizer.css
site/js/: playground.js  toolpath-core.js  visualizer.js
site/pages/: cli.md  crates.md  faq.md  format.md  rfc.njk  visualizer.njk
