[workspace]
members = [
    "crates/toolpath",
    "crates/toolpath-git",
    "crates/toolpath-claude",
    "crates/toolpath-dot",
    "crates/path",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
toolpath = { path = "crates/toolpath" }
toolpath-git = { path = "crates/toolpath-git" }
toolpath-claude = { path = "crates/toolpath-claude" }
toolpath-dot = { path = "crates/toolpath-dot" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.19"
tokio = { version = "1.40", features = ["full"] }
notify = { version = "7", features = ["macos_kqueue"] }
similar = "2"
tempfile = "3.15"
