[workspace]
members = [
    "crates/toolpath",
    "crates/toolpath-git",
    "crates/toolpath-claude",
    "crates/toolpath-dot",
    "crates/toolpath-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
toolpath = { version = "0.1.5", path = "crates/toolpath" }
toolpath-git = { version = "0.1.3", path = "crates/toolpath-git" }
toolpath-claude = { version = "0.1.2", path = "crates/toolpath-claude", default-features = false }
toolpath-dot = { version = "0.1.2", path = "crates/toolpath-dot" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.19"
tokio = { version = "1.40", features = ["full"] }
notify = { version = "7", features = ["macos_kqueue"] }
similar = "2"
tempfile = "3.15"

[profile.wasm]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
