[package]
name = "toolpath-claude"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository = "https://github.com/empathic/toolpath"
description = "Derive Toolpath provenance documents from Claude conversation logs"
keywords = ["claude", "provenance", "toolpath", "audit", "ai"]
categories = ["development-tools"]

[features]
default = ["watcher"]
watcher = ["dep:notify", "dep:tokio"]

[dependencies]
toolpath = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
notify = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "time", "fs"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
