[package]
name = "toolpath-cli"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository = "https://github.com/empathic/toolpath"
description = "CLI for deriving, querying, and visualizing Toolpath provenance"
keywords = ["provenance", "toolpath", "cli", "audit", "traceability"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "path"
path = "src/main.rs"

[dependencies]
toolpath = { workspace = true }
toolpath-git = { workspace = true }
toolpath-dot = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
similar = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
rand = "0.9"

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
toolpath-claude = { workspace = true, features = ["watcher"] }
git2 = { workspace = true }

[target.'cfg(target_os = "emscripten")'.dependencies]
toolpath-claude = { workspace = true }

[dev-dependencies]
