[package]
name = "toolpath-git"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Derive Toolpath provenance documents from git repository history"

[dependencies]
toolpath = { workspace = true }
git2 = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
