[package]
name = "toolpath-git"
version = "0.1.1"
edition.workspace = true
license.workspace = true
repository = "https://github.com/empathic/toolpath"
description = "Derive Toolpath provenance documents from git repository history"
keywords = ["git", "provenance", "toolpath", "audit", "traceability"]
categories = ["development-tools"]

[dependencies]
toolpath = { workspace = true }
git2 = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
