[package]
name = "toolpath-github"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository = "https://github.com/empathic/toolpath"
description = "Derive Toolpath provenance documents from GitHub pull requests"
keywords = ["github", "provenance", "toolpath", "audit", "traceability"]
categories = ["development-tools"]

[dependencies]
toolpath = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
reqwest = { workspace = true }
