[package]
name = "toolpath"
version = "0.1.3"
edition.workspace = true
license.workspace = true
repository = "https://github.com/empathic/toolpath"
description = "Types, builders, and query operations for Toolpath provenance documents"
keywords = ["provenance", "toolpath", "audit", "traceability", "supply-chain"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
